--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,14 @@
     "version": 2,
     "name": "jds-test",
     "builds": [
-       { "src": "server.js", "use": "@vercel/node" }
+      { 
+          "src": "./server.js", 
+          "use": "@vercel/node" 
+      }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/server.js" }
+      { 
+         "src": "/(.*)", 
+         "dest": "/" }
     ]
  }
