--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,6 @@
     "routes": [
       { 
          "src": "/(.*)", 
-         "dest": "./server.js" }
+         "dest": "/api/signup" }
     ]
  }
